src/main/java/org/example/basic/global/error/exception/BusinessException.java
package org.example.basic.global.error.exception;


import lombok.Getter;
import org.example.basic.global.error.ErrorCode;

@Getter
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
